// Vitest Snapshot v1

exports[`csr snapshot test > csr test ./src/button/demos/base.vue 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--default t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        默认按钮
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        主要按钮
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--text t-button--default t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        文本按钮
        
      </span>
    </button>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/bottom.vue 1`] = `
<div
  class="button-group-base"
>
  <div
    class="t-cell-group"
  >
    <div
      class="t-cell-group__title"
    >
      
      块状风格
      
    </div>
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-button-group t-button-group--default"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        
      </div>
      <div
        class="t-button-group t-button-group--default"
      >
        
        <button
          aria-disabled="true"
          class="t-button t-size-m t-button--base t-button--square t-is-disabled"
          disabled=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="true"
          class="t-button t-size-m t-button--base t-button--primary t-button--square t-is-disabled"
          disabled=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        
      </div>
      
    </div>
  </div>
  <div
    class="t-cell-group"
  >
    <div
      class="t-cell-group__title"
    >
      
      菜单风格
      
    </div>
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-button-group t-button-group--menu"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        
      </div>
      <div
        class="t-button-group t-button-group--menu"
      >
        
        <button
          aria-disabled="true"
          class="t-button t-size-m t-button--base t-button--square t-is-disabled"
          disabled=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="true"
          class="t-button t-size-m t-button--base t-button--square t-is-disabled"
          disabled=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        <button
          aria-disabled="true"
          class="t-button t-size-m t-button--base t-button--square t-is-disabled"
          disabled=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            置底按钮
            
          </span>
        </button>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/disabled.vue 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--base t-button--default t-button--square t-is-disabled"
      disabled=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        主要按钮
        
      </span>
    </button>
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--outline t-button--default t-button--square t-is-disabled"
      disabled=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        次要按钮
        
      </span>
    </button>
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--base t-button--danger t-button--square t-is-disabled"
      disabled=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        警告按钮
        
      </span>
    </button>
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--base t-button--default t-button--square t-button--ghost t-is-disabled"
      disabled=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        幽灵按钮
        
      </span>
    </button>
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--text t-button--default t-button--square t-is-disabled"
      disabled=""
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        文本按钮
        
      </span>
    </button>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/icon.vue 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--text t-button--default t-button--square"
      role="button"
    >
      <span
        class="t-button__text"
      >
        
        带图标文字按钮
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      
      <svg
        class="t-icon t-icon-star"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 6.38L8 3.26 6.46 6.38l-3.44.5L5.5 9.31l-.59 3.43L8 11.12l3.08 1.62-.59-3.43L13 6.88l-3.45-.5zm5-.29a.3.3 0 01.16.52l-3.13 3.05.74 4.3a.3.3 0 01-.44.32L8 12.25l-3.87 2.03a.3.3 0 01-.43-.31l.73-4.31L1.3 6.6a.3.3 0 01.17-.52l4.33-.62 1.93-3.92a.3.3 0 01.54 0l1.94 3.92 4.32.62z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
      <span
        class="t-button__text"
      >
        
         带图标的按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--default t-button--square t-is-loading"
      role="button"
    >
      <svg
        class="t-icon t-icon-loading"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__text"
      >
        
        带图标的按钮-加载
        
      </span>
    </button>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/mobile.vue 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7c375b15=""
>
  <h1
    class="title"
    data-v-7c375b15=""
  >
    Button 按钮
  </h1>
  <p
    class="summary"
    data-v-7c375b15=""
  >
    按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础按钮
    </p>
    
    <div
      class="button-demo"
      data-v-7c375b15=""
      style="margin: 0px 16px 0px;"
    >
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          强按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          弱按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--default t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          次按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
          带图标按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--danger t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          警告按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--danger t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          弱警告按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--text t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          文字按钮
          
        </span>
      </button>
    </div>
    <div
      class="button-demo"
      data-v-7c375b15=""
      style="background: rgb(166, 166, 166); padding: 16px 16px 0px 16px;"
    >
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--default t-button--square t-button--ghost"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          幽灵按钮
          
        </span>
      </button>
    </div>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square t-size-full-width"
      data-v-7c375b15=""
      role="button"
      style="margin: 8px 0px;"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        通栏按钮
        
      </span>
    </button>
    <div
      class="t-button-group t-button-group--default"
      data-v-7c375b15=""
    >
      
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--outline t-button--default t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          次按钮
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          主按钮
          
        </span>
      </button>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      按钮禁用态
    </p>
    
    <div
      class="button-demo"
      data-v-7c375b15=""
      style="margin: 0px 16px;"
    >
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--base t-button--primary t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          强按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--primary t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          弱按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--default t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          次按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--primary t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
          带图标按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--base t-button--danger t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          警告按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--danger t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          弱警告按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--text t-button--primary t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          文字按钮
          
        </span>
      </button>
    </div>
    <div
      class="button-demo"
      data-v-7c375b15=""
      style="background: rgb(166, 166, 166); padding: 16px 16px 0px 16px;"
    >
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--default t-button--square t-button--ghost t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          幽灵按钮
          
        </span>
      </button>
    </div>
    <button
      aria-disabled="true"
      class="t-button t-size-m t-button--base t-button--primary t-button--square t-size-full-width t-is-disabled"
      data-v-7c375b15=""
      disabled=""
      role="button"
      style="margin: 8px 0px;"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        通栏按钮
        
      </span>
    </button>
    <div
      class="t-button-group t-button-group--default"
      data-v-7c375b15=""
      style="margin-top: 8px;"
    >
      
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--outline t-button--default t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          次按钮
          
        </span>
      </button>
      <button
        aria-disabled="true"
        class="t-button t-size-m t-button--base t-button--primary t-button--square t-is-disabled"
        data-v-7c375b15=""
        disabled=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          主按钮
          
        </span>
      </button>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 规格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      文字按钮尺寸
    </p>
    
    <div
      class="button-demo"
      data-v-7c375b15=""
      style="margin: 0px 16px;"
    >
      <button
        aria-disabled="false"
        class="t-button t-size-l t-button--base t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮 44
          
        </span>
      </button>
      <button
        aria-disabled="false"
        class="t-button t-size-m t-button--base t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
        style="width: 240px;"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮 40
          
        </span>
      </button>
      <br
        data-v-7c375b15=""
      />
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--primary t-button--square"
        data-v-7c375b15=""
        role="button"
        style="width: 90px;"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮 36
          
        </span>
      </button>
    </div>
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/shape.vue 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--round"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        小圆角
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        无圆角
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--default t-button--round"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        小圆角
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--default t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        无圆角
        
      </span>
    </button>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/size.vue 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-l t-button--base t-button--default t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        大按钮
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        中按钮
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-s t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        小按钮
        
      </span>
    </button>
  </div>
  
</div>
`;

exports[`csr snapshot test > csr test ./src/button/demos/test.vue 1`] = `
<div>
  <p>
    正确
  </p>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        主要按钮
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--outline t-button--default t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        次要按钮
        
      </span>
    </button>
  </div>
  <br />
  <p>
    错误
  </p>
  <div
    class="tdesign-demo-block"
  >
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        主要按钮
        
      </span>
    </button>
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--primary t-button--square"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        次要按钮
        
      </span>
    </button>
  </div>
</div>
`;
